# encapfn-tock

./: Cargo.toml  README.md  cryptolib.tar.xz  rust-toolchain.toml  shell.nix
.cargo/: config.toml
demo/nrf52840dk/: Makefile  layout.ld
demo/nrf52840dk/src/: main.rs
encapfn-tock/: Cargo.toml
encapfn-tock/.cargo/: config.toml
encapfn-tock/encapfn_c_rt/: Configuration.mk  EncapfnTBF.mk  encapfn_layout.ld  init.c  init_riscv32.S  sys.c
encapfn-tock/src/: binary.rs  cortex_m_rt.rs  lib.rs  rv32i_c_rt.rs
examples/boards/cargo/: README.md  tock_flags.toml
examples/boards/earlgrey-cw310/: Cargo.toml  Makefile  ef_layout.ld
examples/boards/earlgrey-cw310/.cargo/: config.toml
examples/boards/earlgrey-cw310/src/: main.rs
examples/boards/nrf52840dk/: Cargo.toml  README.md
examples/boards/nrf52840dk/.cargo/: config.toml
examples/boards/nrf52840dk/src/: main.rs
examples/boards/qemu_rv32_virt/: Cargo.toml  Justfile  Makefile  ef_layout.ld  layout.ld
examples/boards/qemu_rv32_virt/.cargo/: config.toml
examples/boards/qemu_rv32_virt/src/: main.rs
examples/demo/: Cargo.toml  Makefile  build.rs  demo.encapfn.toml  layout_litex_sim.ld
examples/demo/c_src/: demo.c  demo.h  efdemo_tbf.c
examples/demo/src/: lib.rs
examples/littlefs/: Cargo.toml  Makefile  build.rs  build_liblfs_tbf.sh  out.txt
examples/littlefs-boards/earlgrey-cw310/: Cargo.toml  Makefile  ef_layout.ld
examples/littlefs-boards/earlgrey-cw310/.cargo/: config.toml
examples/littlefs-boards/earlgrey-cw310/src/: main.rs
examples/littlefs/c_src/: ef_littlefs.c  ef_littlefs.h  ef_littlefs_tbf.c
examples/littlefs/src/: lib.rs
examples/lwip/: Cargo.toml  Makefile
examples/lwip-boards/earlgrey-cw310/: Cargo.toml  Makefile  ef_layout.ld
examples/lwip-boards/earlgrey-cw310/src/: main.rs
examples/lwip/rust/: lib.rs
examples/lwip/src/: eflwip_tbf.c
examples/otcrypto/: Cargo.toml  Makefile  build.rs  build_libotcrypto_tbf.sh  otcrypto.encapfn.toml
examples/otcrypto/c_src/: encapfn_otcrypto_tbf.c  encapfn_otcrypto_tbf.h
examples/otcrypto/src/: ef_otcrypto_hmac.rs  ef_otcrypto_hmac_nocopy.rs  hmac_bench.rs  lib.rs  unsafe_otcrypto_hmac.rs  unsafe_otcrypto_hmac_validate.rs
examples/ubench/: Cargo.toml  Makefile
examples/ubench-boards/earlgrey-cw310/: Cargo.toml  Makefile  layout.ld
examples/ubench-boards/earlgrey-cw310/src/: main.rs
examples/ubench/c_src/: demo.c  demo.h
examples/ubench/src/: lib.rs
littlefs/build-riscv32/: lfs.ci  lfs.d  lfs_util.ci  lfs_util.d
lwip/: Cargo.toml  Makefile  build.rs  lwip.encapfn.toml
lwip/config/: lwipopts.h
lwip/rust/: lib.rs
lwip/src/: eflwip_tbf.c
lwip/src/core/: netif.c
lwip/src/include/lwip/: netif.h
opentitan-cryptolib/include/: entropy.h  integrity.h  kdf.h  keyblob.h  keymgr_defs.h  otcrypto.h
