[workspace]
members = [
    "encapfn-tock",
    "examples/boards/earlgrey-cw310",
    "examples/boards/qemu_rv32_virt",
    "examples/demo",
    "examples/otcrypto",
    "examples/ubench",
    "examples/ubench-boards/earlgrey-cw310",
    "examples/lwip",
    "examples/lwip-boards/earlgrey-cw310",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Leon Schuermann <leon@is.currently.online>"]
edition = "2021"

[workspace.dependencies]
encapfn = { git = "https://github.com/encapfn/encapfn", rev = "af3822efffe1bc443e5ff6f9e305f72b241fea1f" }
bindgen = { git = "https://github.com/encapfn/rust-bindgen", rev = "303b1f41e7ea715df515cd43ba7909bf61cf97cf" }

capsules-core = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
capsules-extra = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
capsules-system = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
components = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
kernel = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
tock-tbf = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
tock_build_scripts = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
rv32i = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
sifive = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
qemu_rv32_virt_chip = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
qemu_rv32_virt = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
earlgrey_board_lib = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }
earlgrey = { git = "https://github.com/encapfn/tock", rev = "b9f9c8fad40a9dcae1d369733208112fd530f25d" }


[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
