# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2024.

[package]
name = "encapfn-demo-nrf52840dk"
version.workspace = true
authors.workspace = true
build = "../build.rs"
edition.workspace = true

[dependencies]
kernel.workspace = true
nrf52840.workspace = true
nrf52840dk.workspace = true
capsules-core.workspace = true
capsules-extra.workspace = true
capsules-system.workspace = true
components.workspace = true

