# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "encapfn-demo-qemu_rv32_virt"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "../build.rs"

[dependencies]
components.workspace = true
sifive.workspace = true
rv32i.workspace = true
kernel.workspace = true
qemu_rv32_virt_chip.workspace = true

capsules-core.workspace = true
capsules-extra.workspace = true
capsules-system.workspace = true

qemu_rv32_virt.workspace = true

encapfn.workspace = true
encapfn-tock = { path = "../../../encapfn-tock" }
# encapfn-example-demo = { path = "../../demo" }
encapfn-tock-lwip = { path = "../../lwip" }

[build-dependencies]
tock_build_scripts.workspace = true
